--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,18 +10,13 @@ on:
 
 jobs:
   analyze:
-    name: Analyze (${{ matrix.language }})
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    name: Analyze
+    runs-on: ubuntu-latest
     permissions:
       security-events: write
       packages: read
       actions: read
       contents: read
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'csharp', 'go', 'python', 'javascript-typescript' ]
 
     steps:
     - name: Checkout repository
@@ -29,10 +24,6 @@ jobs:
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
-      with:
-        category: "/language:${{matrix.language}}"
