--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 'latest'
+        dotnet-version: '9.0'
 
     - name: Restore .NET dependencies
       run: dotnet restore
