--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,19 +1,23 @@
 name: Analyze
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
     permissions:
-      security-events: write
-      packages: read
       actions: read
       contents: read
+      security-events: write
 
     steps:
     - name: Checkout repository
@@ -24,14 +28,14 @@ jobs:
       with:
         dotnet-version: '9.0'
 
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+
     - name: Restore .NET dependencies
       run: dotnet restore
 
     - name: Build .NET project
       run: dotnet build --no-restore --configuration Release
-
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
